[gd_scene load_steps=5 format=2]

[ext_resource path="res://Interface/theme/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/Change_volume.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 39
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[node name="Volume_button" type="Button"]
margin_left = 180.716
margin_top = 270.732
margin_right = 347.716
margin_bottom = 321.732
focus_mode = 0
custom_fonts/font = SubResource( 1 )
enabled_focus_mode = 0
text = "Volume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 187.783
margin_top = -28.8381
margin_right = 621.783
margin_bottom = 73.1619
color = Color( 0, 0, 0, 0.380392 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
margin_left = 187.783
margin_top = -14.8381
margin_right = 609.783
margin_bottom = 69.1619
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bgm" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 422.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer/Bgm"]
margin_right = 228.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Background"

[node name="Control" type="Control" parent="VBoxContainer/Bgm"]
margin_left = 232.0
margin_right = 232.0
margin_bottom = 40.0

[node name="bgm_ScrollBar" type="HScrollBar" parent="VBoxContainer/Bgm/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 12.2634
margin_top = -6.0
margin_right = 197.263
margin_bottom = 6.0
step = 10.0
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sfx" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 422.0
margin_bottom = 84.0

[node name="Label" type="Label" parent="VBoxContainer/Sfx"]
margin_right = 127.0
margin_bottom = 40.0
custom_fonts/font = SubResource( 2 )
text = "Effects"

[node name="Control" type="Control" parent="VBoxContainer/Sfx"]
margin_left = 131.0
margin_right = 131.0
margin_bottom = 40.0

[node name="sfx_HScrollBar" type="HScrollBar" parent="VBoxContainer/Sfx/Control"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.8492
margin_top = -6.0
margin_right = 195.849
margin_bottom = 6.0
step = 10.0
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="." to="VBoxContainer" method="_on_Volume_button_pressed"]
[connection signal="value_changed" from="VBoxContainer/Bgm/Control/bgm_ScrollBar" to="VBoxContainer" method="_on_bgm_ScrollBar_value_changed"]
[connection signal="value_changed" from="VBoxContainer/Sfx/Control/sfx_HScrollBar" to="VBoxContainer" method="_on_sfx_HScrollBar_value_changed"]
